--- a/app/components/header.html
+++ b/app/components/header.html
@@ -12,5 +12,57 @@
 <body>
 
   <header class="header">
-    header
+    <div class="container">
+      <div class="header__inner">
+        <div class="header__logo">
+          <a class="logo" href="#">
+            <img class="logo__img" src="images/logo.svg" alt="logo">
+          </a>
+          <h5 class="header__subtitle">
+            Продажа и изготовление мебели
+          </h5>
+        </div>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">
+                Главная
+              </a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">
+                Каталог
+              </a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">
+                Доставка и оплата
+              </a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">
+                О компании
+              </a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">
+                Контакты
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="user-nav">
+          <div class="user-nav__item">
+            <img src="images/icons/clock.svg" alt="time">
+            <p>Пн - Пт: 10:00-20:00</p>
+          </div>
+          <div class="user-nav__item">
+            <a class="user-nav__phone" href="#">+7 727 327 25 22</a>
+          </div>
+          <div class="user-nav__item">
+            <button class="user-nav__btn">Заказать звонок</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
