--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -4,10 +4,17 @@ body {
 }
 
 body {
+  color: $text;
   display: flex;
   flex-direction: column;
 }
 
 .main {
   flex-grow: 1;
+}
+
+.container {
+  max-width: 1700px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
