--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,5 +1,55 @@
   <footer class="footer">  
-    footer
+    <div class="container">
+      <div class="footer__inner">
+        <div class="footer__logo">
+          <a class="logo" href="#">
+            <img class="logo__img" src="images/logo.svg" alt="logo">
+          </a>
+          <h5 class="footer__subtitle">Все права защищены 2020</h5>
+        </div>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__list-item footer__menu">
+              <a class="menu__list-link" href="#">
+                Главная
+              </a>
+            </li>
+            <li class="menu__list-item footer__menu">
+              <a class="menu__list-link" href="#">
+                Каталог
+              </a>
+            </li>
+            <li class="menu__list-item footer__menu">
+              <a class="menu__list-link" href="#">
+                Доставка и оплата
+              </a>
+            </li>
+            <li class="menu__list-item footer__menu">
+              <a class="menu__list-link" href="#">
+                О компании
+              </a>
+            </li>
+            <li class="menu__list-item footer__menu">
+              <a class="menu__list-link" href="#">
+                Контакты
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__nav">
+          <a class="footer__phone" href="#">+7 727 327 25 22</a>
+          <button class="user-nav__btn">Заказать звонок</button>
+        </div>
+      </div>
+      <div class="footer__copy">
+        <a class="footer__copy-link" href="#">
+          Политика конфиденциальности
+        </a>
+        <p class="footer__copy-author">
+          Design by <a class="footer__copy-author__link" href="#">attention.kz</a> 
+        </p>
+      </div>
+    </div>
   </footer>
 
 <script src="js/main.min.js"></script>
